--- a/views/vizit.erb
+++ b/views/vizit.erb
@@ -7,6 +7,17 @@
     <label>Ваше имя</label>
     <input name="username" type="text" class="form-control" placeholder="Ваше имя" value="<%= @username %>">
   </div>
+
+  <div class="form-group">
+    <label>Ваш телефон</label>
+    <input name="phone" type="text" class="form-control" placeholder="Ваш телефон" value="<%= @phone %>">
+  </div>
+
+  <div class="form-group">
+    <label>Когда вас ждать?</label>
+    <input id="datetimepicker" name="datetime" type="text" class="form-control" placeholder="Введите дату и время" value="<%= @datetime %>">
+  </div>
+
   <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
