Make links on main page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,9 @@
 <h2>Список парикмахеров</h2>
 
- <% @barbers.each do |row| %>
- <p><%="The barber name is #{ row.name}" %></p>
+ <% @barbers.each do |barber| %>
+ <p>
+   <a href="/barber/<%= barber.id %>"> <%= barber.name %></a>
+ </p>
  <% end %>
 
 
