--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,7 @@
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a href="/vizit">Записаться</a></li>
-			      <li><a href="/something">Something</a></li>
+			      <li><a href="/bookings">Список записавшихся</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
